(style): use object-fit: contain for showcase im ages to ensure all of the image is visible and recompile scss

--- a/src/_includes/css/style.css
+++ b/src/_includes/css/style.css
@@ -191,8 +191,7 @@ header .intro .hire-me:hover {
   padding: 0;
 }
 .featured-img .showcase-img {
-  object-fit: cover;
-  /* object-fit: contain; this is best but causes letterboxing" */
+  object-fit: contain; /* this is useful to ensure intrinsic image size to preventis used to prevent image cropping but causes letterboxing" */
   max-width: 100%;
   height: 90vh;
   max-height: 600px;
@@ -420,7 +419,6 @@ img {
   max-width: 100%;
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 p {
